# DocCreator

./: .appveyor.yml  .clang-format  .travis.yml  AUTHORS  CMakeLists.txt  CodingRules.txt  FAQ.md  README  README.md  TODO.txt
framework/: CMakeLists.txt  DocumentCreator.pc
framework/src/: context.h  core.h  framework.h  framework_global.h  iomanager.h  models.h  mvc.h  patterns.h
framework/src/Degradations/: BleedThrough.cpp  BleedThrough.hpp  BlurFilter.cpp  BlurFilter.hpp  CMakeLists.txt  ColorUtils.cpp  ColorUtils.hpp  ConnectedComponent.cpp  ConnectedComponent.hpp  Distortion3D.cpp  Distortion3D.hpp  DocumentDegradation.hpp  ElasticDeformation.cpp  ElasticDeformation.hpp  FileUtils.cpp  FileUtils.hpp  GradientDomainDegradation.cpp  GradientDomainDegradation.hpp  GrayscaleCharsDegradationModel.cpp  GrayscaleCharsDegradationModel.hpp  HoleDegradation.cpp  HoleDegradation.hpp  NoiseDegradation.cpp  NoiseDegradation.hpp  PhantomCharacter.cpp  PhantomCharacter.hpp  RotationDegradation.cpp  RotationDegradation.hpp  ShadowBinding.cpp  ShadowBinding.hpp
framework/src/Degradations/Distortion3DModel/: CMakeLists.txt
framework/src/Utils/: ImageUtils.cpp  ImageUtils.hpp  connectedcomponentextraction.cpp  connectedcomponentextraction.h  convertor.cpp  convertor.h
framework/src/context/: CurrentRandomDocumentContext.h  appcontext.cpp  appcontext.h  backgroundcontext.cpp  backgroundcontext.h  documentcontext.cpp  documentcontext.h  fontchangedobservable.cpp  fontchangedobservable.h  fontcontext.cpp  fontcontext.h  ifontchangedobserver.h
framework/src/core/: configurationmanager.cpp  configurationmanager.h
framework/src/iomanager/: TxtDocumentSaver.cpp  TxtDocumentSaver.hpp  documentfilemanager.cpp  documentfilemanager.h  documentloader.h  documentloaderdirector.h  documentsaver.h  documentsaverdirector.h  fontfilemanager.cpp  fontfilemanager.h  xmldocumentloader.cpp  xmldocumentloader.h  xmldocumentsaver.cpp  xmldocumentsaver.h
framework/src/models/: character.cpp  character.h  characterdata.cpp  characterdata.h  doc.h  font.cpp  font.h
framework/src/models/doc/: block.cpp  block.h  doccharacter.h  doccomponent.h  doccomponentblock.cpp  doccomponentblock.h  docimageblock.cpp  docimageblock.h  docparagraph.cpp  docparagraph.h  docstring.cpp  docstring.h  docstyle.cpp  docstyle.h  docstylemanager.cpp  docstylemanager.h  doctestblock.cpp  doctestblock.h  doctextblock.cpp  doctextblock.h  document.cpp  document.h  doczone.cpp  doczone.h  element.cpp  element.h  leaf.cpp  leaf.h  node.h  nodeofleafs.h  nodeofnodes.h  page.cpp  page.h
framework/src/mvc/: icontroller.h  iview.h
framework/src/patterns/: observable.cpp  observable.h  observer.h  singleton.h
libs/Lipsum4Qt/: CMakeLists.txt  Lipsum4Qt.pro
libs/Lipsum4Qt/src/: Lipsum4Qt.cpp  Lipsum4Qt.hpp  Lipsum4Qt_global.h
software/DocCreator/: CMakeLists.txt  adoc-desktop.sh  adoc.icns  adoc.rc  application.ini.in  fr.labri.doccreator.doccreator.appdata.xml  fr.labri.doccreator.doccreator.desktop  testsBlurFilter.sh  testsDefectLuminosity.sh
software/DocCreator/src/: DocCreator.cpp  DocCreator.hpp  appconstants.h  doccreator.qrc  doccreator_app.qrc.in  main.cpp  testBlurFilter.cpp  testHoleDegradation.cpp  testShadowBinding.cpp
software/DocCreator/src/Degradations/: BleedThroughParameters.cpp  BleedThroughParameters.hpp  BleedThroughParametersDialog.cpp  BleedThroughParametersDialog.hpp  BleedThroughParametersDialog.ui  BleedThroughQ.cpp  BleedThroughQ.hpp  BlurFilterDialog.cpp  BlurFilterDialog.hpp  BlurFilterDialog.ui  BlurFilterQ.cpp  BlurFilterQ.hpp  ElasticDeformationQ.cpp  ElasticDeformationQ.hpp  GradientDomainDegradationDialog.cpp  GradientDomainDegradationDialog.hpp  GradientDomainDegradationDialog.ui  GradientDomainDegradationQ.cpp  GradientDomainDegradationQ.hpp  GrayCharacterDegradationDialog.cpp  GrayCharacterDegradationDialog.hpp  GrayCharacterDegradationDialog.ui  GrayCharacterDegradationModelQ.cpp  GrayCharacterDegradationModelQ.hpp  GrayCharacterDegradationParameter.cpp  GrayCharacterDegradationParameter.hpp  GrayCharacterDegradationParameter.ui  HoleDegradationDialog.cpp  HoleDegradationDialog.hpp  HoleDegradationDialog.ui  HoleDegradationQ.cpp  HoleDegradationQ.hpp  ImageGenerationFromDirDialog.cpp  ImageGenerationFromDirDialog.hpp  ImageGenerationFromDirDialog.ui  NoiseDegradationQ.cpp  NoiseDegradationQ.hpp  PhantomCharacterDialog.cpp  PhantomCharacterDialog.hpp  PhantomCharacterDialog.ui  (+13 more)
software/DocCreator/src/Degradator/: CMakeLists.txt  main.cpp  paths.hpp.in
software/DocCreator/src/Document/: ADocumentView.hpp  BackGroundChanger.cpp  BackGroundChanger.hpp  ChooseLabelForComponentForm.cpp  ChooseLabelForComponentForm.hpp  ChooseLabelForComponentForm.ui  DocRenderFlags.hpp  DocumentController.cpp  DocumentController.hpp  DocumentPropertiesView.cpp  DocumentPropertiesView.hpp  DocumentToXMLExporter.cpp  DocumentToXMLExporter.hpp  DocumentView.cpp  DocumentView.hpp  GraphicView.cpp  GraphicView.hpp  GraphicsBlockItem.cpp  GraphicsBlockItem.hpp  (+29 more)
software/DocCreatorMakeFont/: CMakeLists.txt  CharacterWidget.cpp  CharacterWidget.hpp  MainWindow.cpp  MainWindow.hpp  Range.hpp
software/DrawCCs/: CMakeLists.txt  main.cpp
software/GrayscaleDegradator/: CMakeLists.txt  main.cpp
tests/Degradations/: CMakeLists.txt  paths.hpp.in  testBleedThrough.cpp  testBlurDegradation.cpp  testCharactersDegradation.cpp  testCommon.cpp  testCommon.hpp  testDistortion3D.cpp  testElasticDeformation.cpp  testGradientDomainDegradation.cpp  testHoleDegradation.cpp  testNoiseDegradation.cpp  testPhantomCharacter.cpp  testRotationDegradation.cpp  testShadowBinding.cpp
tests/IO/: CMakeLists.txt  paths.hpp.in  testFontIO.cpp
tools/: CMakeLists.txt  cleanMesh.cpp  convertBRSOBJ.cpp  convertOF.cpp  degradator.cpp  paths.hpp.in  removeTexCoords.cpp
wrapper/python/: BUILD.txt  CMakeLists.txt  CentOS-Base.repo  Degradations.cpp  Degradations.hpp  Degradations.i  DocCreator.py  README.md  __init__.py  build_wheels_manylinux.sh  build_wheels_with_osmesa_manylinux.sh  opencv_converter.hpp  setup.py.in  test.py  testPython.py
(+184 files in other folders)
