
IF(BUILD_OTHER_PROGS)
  IF(BUILD_WITH_OSMESA)

    SET(STAINIMAGES_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Image/stainImages/images)
    SET(PHANTOMPATTERNS_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Image/phantomPatterns)
    SET(HOLESPATTERNS_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Image/holePatterns)
    SET(MESHES_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Mesh)
    CONFIGURE_FILE(paths.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/paths.hpp @ONLY)
    
    ADD_EXECUTABLE(DocCreatorDegradator WIN32 MACOSX_BUNDLE degradator.cpp)
    TARGET_INCLUDE_DIRECTORIES(DocCreatorDegradator PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
    TARGET_LINK_LIBRARIES(DocCreatorDegradator DocCreatorDegradations)

    IF(UNIX)
      install(TARGETS ${PROGNAME} RUNTIME DESTINATION bin)
    ENDIF(UNIX)
    IF(WIN32)
      INSTALL(TARGETS ${PROGNAME} RUNTIME DESTINATION programs COMPONENT applications)
    ENDIF(WIN32)
    
  ENDIF()
ENDIF()



IF(BUILD_OTHER_PROGS_3D)

  ADD_EXECUTABLE(convertBRSOBJ WIN32 MACOSX_BUNDLE convertBRSOBJ.cpp)
  TARGET_LINK_LIBRARIES(convertBRSOBJ Distortion3DCommon)

  ADD_EXECUTABLE(cleanMesh WIN32 MACOSX_BUNDLE cleanMesh.cpp)
  TARGET_LINK_LIBRARIES(cleanMesh Distortion3DCommon)

  ADD_EXECUTABLE(removeTexCoords WIN32 MACOSX_BUNDLE removeTexCoords.cpp)
  TARGET_LINK_LIBRARIES(removeTexCoords Distortion3DCommon)

ENDIF(BUILD_OTHER_PROGS_3D)
