
IF(BUILD_OTHER_PROGS)

    SET(STAINIMAGES_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Image/stainImages/images)
    SET(PHANTOMPATTERNS_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Image/phantomPatterns)
    SET(HOLESPATTERNS_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Image/holePatterns)
    SET(MESHES_DATA_SRC_DIRECTORY ${CMAKE_SOURCE_DIR}/data/Mesh)
    CONFIGURE_FILE(paths.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/paths.hpp @ONLY)
    
    ADD_EXECUTABLE(DocCreatorDegradator degradator.cpp)
    TARGET_INCLUDE_DIRECTORIES(DocCreatorDegradator PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
    SET_TARGET_PROPERTIES(DocCreatorDegradator PROPERTIES CXX_STANDARD 11
      CXX_STANDARD_REQUIRED YES
      CXX_EXTENSIONS NO
      )
    TARGET_LINK_LIBRARIES(DocCreatorDegradator DocCreatorDegradations)

    IF(UNIX)
      install(TARGETS ${PROGNAME} RUNTIME DESTINATION bin)
    ENDIF(UNIX)
    IF(WIN32)
      INSTALL(TARGETS ${PROGNAME} RUNTIME DESTINATION programs COMPONENT applications)
    ENDIF(WIN32)


    ADD_EXECUTABLE(convertOF convertOF.cpp)
    TARGET_LINK_LIBRARIES(convertOF DocCreatorFramework)
    SET_TARGET_PROPERTIES(convertOF PROPERTIES CXX_STANDARD 11
      CXX_STANDARD_REQUIRED YES
      CXX_EXTENSIONS NO
      )
    
ENDIF()



IF(BUILD_OTHER_PROGS_3D)

  ADD_EXECUTABLE(convertBRSOBJ convertBRSOBJ.cpp)
  TARGET_LINK_LIBRARIES(convertBRSOBJ Distortion3DMesh)
  SET_TARGET_PROPERTIES(convertBRSOBJ PROPERTIES CXX_STANDARD 11
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
    )

  ADD_EXECUTABLE(cleanMesh cleanMesh.cpp)
  TARGET_LINK_LIBRARIES(cleanMesh Distortion3DMesh)
  SET_TARGET_PROPERTIES(cleanMesh PROPERTIES CXX_STANDARD 11
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
    )

  ADD_EXECUTABLE(removeTexCoords removeTexCoords.cpp)
  TARGET_LINK_LIBRARIES(removeTexCoords Distortion3DMesh)
  SET_TARGET_PROPERTIES(removeTexCoords PROPERTIES CXX_STANDARD 11
    CXX_STANDARD_REQUIRED YES
    CXX_EXTENSIONS NO
    )

ENDIF(BUILD_OTHER_PROGS_3D)
